0.3.3 unreleased

    - Adding Chemistry::OpenSMILES::Writer, implementing a SMILES writer
      for the data structures built by Chemistry::OpenSMILES::Parser.
    - Converting atom charge to integer.

0.3.2 2020-10-05

    - Explicitly setting bond order to ':' on bonds between aromatic
      atoms.

0.3.1 2020-09-17

    - Establishing deterministic order while generating graph vertices
      for implicit hydrogen atoms.

0.3.0 2020-09-16

    - Deriving counts of implicit hydrogen atoms.
    - Default number of attached hydrogen atoms for atoms in square
      brackets is 0.
    - Supporting bracketless '*' atom.

0.2.1 2020-08-13

    - Adding 'number' atom field to store atom positions in the initial
      SMILES string.
    - Making 'class' atom field mandatory.
    - Making 'isotope' atom field an integer.

0.2.0 2020-05-20

    - Fixing an issue with graph merging.
    - Unifying the representation of single bonds.
    - Extending POD documentation.

0.1.3 2020-05-19

    - Detecting and reporting unbalanced parentheses.
    - Detecting and reporting unclosed ring bonds.
    - Fixing position pointers in error messages, removing line numbers.
    - Adding versioned dependency on Module::Build::Parse::Yapp v0.1.2.
    - Declaring minimum Perl version.
    - Fixing the POD.

0.1.2 2020-05-17

    - Turning hydrogen counts into real vertices. If 'raw' option is
      present, hydrogen counts are left as integers instead.

0.1.1 2020-05-14

    - Adding missing dependency on Graph::Undirected.
    - Adding POD.

0.1.0 2020-05-13

    - Initial release.